# siru

./: Cargo.toml
src/: fs.rs  io.rs  lib.rs  logging.rs  markdown.rs  minification.rs  prelude.rs  resources.rs  syntax_highlighting.rs  tasks.rs  templating.rs  yaml.rs
src/boilerplate/: hooks.rs  mod.rs
